# llvmcomp

./: .travis.yml  CMakeLists.txt  README.md
include/llvmc/: iinter.h  ilex.h  iparser.h  isymbols.h
main/: CMakeLists.txt  llvmc.cpp
src/: CMakeLists.txt  grammar.txt  iinter.h  ilex.h  inter.cpp  lex.cpp  llvmc.cpp  parser.cpp  symbols.cpp
tests/: arrays.txt  fibonacci.txt  functions.txt  recursion.txt  statements.txt  statements2.txt  statements3.txt  statements4.txt
